# funsearch

./: .gitignore  README.md  differential_evolution.py  identical-checker.py  identical_checker.py  publish.py  pyproject.toml
docs/: index.html  script.js  style.css
docs/json-data/: 3-4-cyclefree_1740228505.json  3-4-cyclefree_1740256478.json  3_4_cyclefree_1740604239.json  gasoline-2d_1742742210.json  gasoline-2d_1742804163.json  gasoline-2d_1742807607.json  gasoline-2d_1742843055.json  gasoline-2d_1743498946.json  gasoline-2d_1743513307.json  gasoline-2d_1743584434.json  gasoline-list_1740234412.json  gasoline-list_1740242660.json  gasoline-list_1740263394.json  gasoline-list_1740309473.json  gasoline-list_1740323614.json  gasoline-list_1740413681.json  gasoline-list_1740753997.json  gasoline-list_1740937436.json  gasoline-list_1741545792.json  gasoline-list_1741639734.json  gasoline-list_1741739941.json  gasoline-list_1741792084.json  gasoline-list_1741797621.json  gasoline_2d_1744279739.json  gasoline_2d_1744285135.json  gasoline_list_1740242660.json  gasoline_list_1740263394.json  gasoline_list_1740413681.json  gasoline_list_1740749743.json  gasoline_list_1740836098.json  gasoline_list_1740915114.json  gasoline_list_1740921680.json  gasoline_list_1741606511.json  gasoline_list_1742128786.json  gasoline_list_1742210364.json  gasoline_list_1742233157.json  index.json  kmeans-2d-greedy_1742304811.json  kmeans-2d-greedy_1742488706.json  kmeans_2d_greedy_1742479142.json  (+8 more)
examples/: 3-4-cyclefree_spec.py  4-cyclefree_spec.py  cap_set_spec.py  gasoline_spec.py  gasoline_spec_iterative.py  gasoline_spec_list.py  paging_spec.py  setcover_spec.py  specification_nonsymmetric_admissible_set.py
examples/gasoline/: README.md  generalised_instance.py  instance.py  main.py
funsearch/: __init__.py  __main__.py  code_manipulation.py  config.py  core.py  evaluator.py  memoize.py  programs_database.py  sampler.py  sandbox.py
funsearch/container/: container_main.py  main.py
funsearch/gasoline/: generalised_instance.py  instance.py  iterative_rounding.py  main.py  merged.py
funsearch/paging/: __init__.py
results/: generate.py  index.html  pyproject.toml  script.js  style.css
specs/: 3-4-cyclefree_spec.py  3_4_cyclefree.py  4-cyclefree.py  4_cyclefree.py  bin-packing-randomised-best-fit.py  bin_packing_randomised_best_fit.py  cap-set.py  gasoline-2d.py  gasoline-list.py  gasoline_2d.py  gasoline_iterative.py  gasoline_spec_iterative.py  k-means-2d-greedy.py  kmeans-2d-greedy.py  kmeans_2d_greedy.py  kmedian-3d-hierarchy.py  kmedian_3d_hierarchy.py  library.py  nemhauser_ullmann.py  nonsymmetric-admissible-set.py  nonsymmetric_admissible_set.py  paging.py  setcover.py  setcover_spec.py  specification_nonsymmetric_admissible_set.py  weighted-kmeans-2d-greedy.py  weighted-kmedian-3d-hierarchy.py  weighted_kmeans_2d_greedy.py  weighted_kmedian_3d_hierarchy.py
specs/clustering-rs/: Cargo.toml  clustering_rs.pyi  pyproject.toml
specs/clustering-rs/src/: lib.rs
tests/: code_manipulation_test.py  evaluator_test.py  funsearch_test.py  main_test.py  programs_database_test.py  sandbox_test.py  test_code_manipulation.py  test_evaluator.py  test_main.py  test_programs_database.py  test_sandbox.py
tests/fixtures/: cap-set.py  inputs-numeric.json  inputs-string.json
