[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["funsearch", "funsearch.container"]

[tool.pdm]
[project]
name = "funsearch"
dynamic = [
  "version",
]
description = "FunSearch algorithm: Mathematical discoveries from program search with large language models"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "absl-py==2.0.0",
    "click==8.1",
    "cloudpickle==3.0.0",
    "llm==0.12",
    "python-dotenv==1.0.0",
    "scipy==1.11.4",
    "numpy==1.26.2",
    "gurobipy>=11.0.3",
    "autopep8>=2.3.1",
]

[project.scripts]
funsearch = "funsearch.__main__:main"

[dependency-groups]
lint = [
  "ruff"
]
dev = [
    "pytest>=8.3.4",
]


[tool.ruff]
indent-width = 2
line-length = 110

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S311",   # suspicious-non-cryptographic-random-usage
    "D203",   # incorrect-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "COM812", # missing-trailing-comma, see https://docs.astral.sh/ruff/rules/missing-trailing-comma/
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101", # Allow asserts in tests
    "D", # Disable all doc in tests
    "ANN201", # Disable return-type-annotation
    "PLR2004", # Allow magic values
    "SLF001", # Allow accessing private members
    "ANN001", # Allow missing type-annotations in function-arguments
]
